Constraintprog/minizinc-1.6/tests/structure-checking/minizinc/double-solve-bad.exp
double-solve-bad.mzn:3:
  structure error: multiple solve items. 
  Other solve items are at: double-solve-bad.mzn:4
% -- pretty-print after structure-checking --------------
solve satisfy;
