Constraintprog/minizinc-1.6/tests/structure-checking/minizinc/double-solve-bad.mzn
% RUNS ON mzn_sc
% This causes a compile error.
solve satisfy;
solve satisfy;
